# kintsugi

./: .dprint.json  .gitignore  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  cog.toml  justfile  pyproject.toml
src/kintsugi/: __init__.py  drawing.py  engine.py  sketch.py  text.py
src/kintsugi/export/: __init__.py  svg.py
tests/: __init__.py  test_sketch.py  test_smoke.py  test_text.py
