[project]
name = "kintsugi"
version = "0.1.0"
description = "Wabi-sabi engineering drawings for woodworking"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Woodcraft CAD", email = "hello@woodcraftcad.com" }]
requires-python = ">=3.12"
dependencies = ["build123d>=0.10.0", "numpy>=1.26"]

[project.optional-dependencies]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  # System dependencies: cocogitto, taplo, dprint
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kintsugi"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--cov-report=html", "--cov-report=term-missing", "--cov=kintsugi", "--strict-markers"]
markers = ["slow: marks tests as slow (deselected in pre-commit, run in CI)"]

[tool.coverage.run]
source = ["src/kintsugi"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
]
ignore = [
  "E501", # line-too-long (handled by formatter)
  "E722", # bare except (used in some calculation contexts)
  "F403", # star imports acceptable for CAD libraries (build123d)
  "F405", # undefined from star imports (expected with F403)
  "F841", # unused local variables in context managers (common in build123d)
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for libraries without stubs
[[tool.mypy.overrides]]
module = ["build123d.*"]
ignore_missing_imports = true
